[gd_scene load_steps=33 format=3 uid="uid://bw7lu7ncf7qdx"]

[ext_resource type="Script" path="res://smart_shell_v2.gd" id="1_li1ay"]
[ext_resource type="Texture2D" uid="uid://dljvsm4c4ir0" path="res://assets/sprites/fx/smartshell/aim0001.png" id="3_yp4hc"]
[ext_resource type="Texture2D" uid="uid://ci6uabctq0eb7" path="res://assets/sprites/fx/smartshell/aim0002.png" id="4_lybve"]
[ext_resource type="Texture2D" uid="uid://dh3i0oj5ufuet" path="res://assets/sprites/fx/smartshell/aim0003.png" id="5_mu5ee"]
[ext_resource type="Texture2D" uid="uid://c4xgjilbtflik" path="res://assets/sprites/fx/smartshell/aim0004.png" id="6_ugva6"]
[ext_resource type="Texture2D" uid="uid://csi7vsi0yg7bg" path="res://assets/sprites/fx/smartshell/aim0005.png" id="7_idij0"]
[ext_resource type="Texture2D" uid="uid://b2djcr2o8ai2k" path="res://assets/sprites/fx/smartshell/aim0006.png" id="8_pkbia"]
[ext_resource type="Texture2D" uid="uid://ctvjdufyaacbh" path="res://assets/sprites/fx/smartshell/aim0007.png" id="9_xjqdw"]
[ext_resource type="Texture2D" uid="uid://dhdrrg2qtacsr" path="res://assets/sprites/fx/smartshell/aim0008.png" id="10_vvx6c"]
[ext_resource type="Texture2D" uid="uid://bgwr8wc2cci8p" path="res://assets/sprites/fx/smartshell/still.png" id="11_a4w1n"]
[ext_resource type="Texture2D" uid="uid://ktjnysmnn17v" path="res://assets/sprites/fx/smartshell/fly0000.png" id="11_pu4d6"]
[ext_resource type="Texture2D" uid="uid://ckg233lmkgv8t" path="res://assets/sprites/fx/smartshell/fly0001.png" id="12_b1gxp"]
[ext_resource type="Texture2D" uid="uid://bsc1wjv5xj5pv" path="res://assets/sprites/fx/smartshell/fly0002.png" id="13_ghdac"]
[ext_resource type="Texture2D" uid="uid://bmgcmafd84luc" path="res://assets/sprites/fx/smartshell/fly0003.png" id="14_1x0j6"]
[ext_resource type="Texture2D" uid="uid://b86i8rnbn1asn" path="res://assets/sprites/fx/smartshell/fly0004.png" id="15_kfnd5"]
[ext_resource type="Texture2D" uid="uid://ic0eh8hphim3" path="res://assets/sprites/fx/smartshell/fly0005.png" id="16_unrp0"]
[ext_resource type="Texture2D" uid="uid://d1kvnh6oo2ucf" path="res://assets/sprites/fx/smartshell/fly0006.png" id="17_ws5m1"]
[ext_resource type="Texture2D" uid="uid://bx2ddraeqgmpt" path="res://assets/sprites/fx/smartshell/fly0007.png" id="18_6noaj"]
[ext_resource type="Texture2D" uid="uid://bdduoy1toty0r" path="res://assets/sprites/fx/smartshell/fly0008.png" id="19_yum7u"]
[ext_resource type="Texture2D" uid="uid://n7l8nshaw4oc" path="res://assets/sprites/fx/mrl-explode/defuse0001.png" id="22_4s3dx"]
[ext_resource type="Texture2D" uid="uid://chvxh1lluta6o" path="res://assets/sprites/fx/mrl-explode/defuse0002.png" id="23_mh01u"]
[ext_resource type="Texture2D" uid="uid://bmj3s5b5orfcy" path="res://assets/sprites/fx/mrl-explode/explode0000.png" id="27_gmbkg"]
[ext_resource type="Texture2D" uid="uid://coxu8m3pjupvv" path="res://assets/sprites/fx/mrl-explode/explode0001.png" id="28_7ly1b"]
[ext_resource type="AudioStream" uid="uid://bvwk46tk0dvqa" path="res://sounds/smart-aim.ogg" id="28_ctj2l"]
[ext_resource type="Texture2D" uid="uid://bq0cwxx0c58nv" path="res://assets/sprites/fx/mrl-explode/explode0002.png" id="29_mppi2"]
[ext_resource type="Texture2D" uid="uid://dak2rwq7lgqwu" path="res://assets/sprites/fx/mrl-explode/explode0003.png" id="30_aqe3y"]
[ext_resource type="Texture2D" uid="uid://c0sfjlsh41pxs" path="res://assets/sprites/fx/mrl-explode/explode0004.png" id="31_u5eom"]
[ext_resource type="Texture2D" uid="uid://ce4y1m6m3yi3q" path="res://assets/sprites/fx/mrl-explode/explode0005.png" id="32_ndisk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_uqsp2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_yp4hc")
}, {
"duration": 1.0,
"texture": ExtResource("4_lybve")
}, {
"duration": 1.0,
"texture": ExtResource("5_mu5ee")
}, {
"duration": 1.0,
"texture": ExtResource("6_ugva6")
}, {
"duration": 1.0,
"texture": ExtResource("7_idij0")
}, {
"duration": 1.0,
"texture": ExtResource("8_pkbia")
}, {
"duration": 1.0,
"texture": ExtResource("9_xjqdw")
}, {
"duration": 1.0,
"texture": ExtResource("10_vvx6c")
}],
"loop": true,
"name": &"aim",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_a4w1n")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_pu4d6")
}, {
"duration": 1.0,
"texture": ExtResource("12_b1gxp")
}, {
"duration": 1.0,
"texture": ExtResource("13_ghdac")
}, {
"duration": 1.0,
"texture": ExtResource("14_1x0j6")
}, {
"duration": 1.0,
"texture": ExtResource("15_kfnd5")
}, {
"duration": 1.0,
"texture": ExtResource("16_unrp0")
}, {
"duration": 1.0,
"texture": ExtResource("17_ws5m1")
}, {
"duration": 1.0,
"texture": ExtResource("18_6noaj")
}, {
"duration": 1.0,
"texture": ExtResource("19_yum7u")
}],
"loop": true,
"name": &"fly",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_pu4d6")
}, {
"duration": 1.0,
"texture": ExtResource("17_ws5m1")
}],
"loop": true,
"name": &"fly_slow",
"speed": 25.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mkn06"]
size = Vector2(6, 2)

[sub_resource type="SpriteFrames" id="SpriteFrames_y57nf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_4s3dx")
}, {
"duration": 1.0,
"texture": ExtResource("23_mh01u")
}],
"loop": false,
"name": &"defuse",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_gmbkg")
}, {
"duration": 1.0,
"texture": ExtResource("28_7ly1b")
}, {
"duration": 1.0,
"texture": ExtResource("29_mppi2")
}, {
"duration": 1.0,
"texture": ExtResource("30_aqe3y")
}, {
"duration": 1.0,
"texture": ExtResource("31_u5eom")
}, {
"duration": 1.0,
"texture": ExtResource("32_ndisk")
}],
"loop": false,
"name": &"explode",
"speed": 12.0
}]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_aj30x"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
angle_min = -90.0
angle_max = 90.0
inherit_velocity_ratio = 0.5
direction = Vector3(-1, 0, 0)
spread = 10.0
flatness = 0.5
initial_velocity_min = 50.0
initial_velocity_max = 100.0
gravity = Vector3(0, 98, 0)
linear_accel_min = -2.23517e-06
linear_accel_max = -2.23517e-06
tangential_accel_min = -2.23517e-06
tangential_accel_max = -2.23517e-06
damping_max = 10.0
scale_max = 1.5

[node name="SmartShell" type="RigidBody2D"]
collision_layer = 0
collision_mask = 3
mass = 0.05
gravity_scale = 0.2
continuous_cd = 2
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_li1ay")
start_impulse = 5.0
engine_impulse = 3.0

[node name="SmartSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_uqsp2")
autoplay = "default"

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(4, 0)
shape = SubResource("RectangleShape2D_mkn06")

[node name="ExplosionSprite" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_y57nf")
animation = &"defuse"

[node name="Particles" type="GPUParticles2D" parent="."]
amount = 24
process_material = SubResource("ParticleProcessMaterial_aj30x")
lifetime = 0.25
preprocess = 0.5
randomness = 0.5
fixed_fps = 20

[node name="EngineSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("28_ctj2l")
max_distance = 1000.0
attenuation = 1.36604
panning_strength = 1.5

[node name="Line2D" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(0, 0, 150, 0, 140, 3, 140, -3, 150, 0)
width = 1.0
end_cap_mode = 2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="ExplosionSprite" to="." method="_on_explosion_sprite_animation_finished"]
